--- a/static/styles.css
+++ b/static/styles.css
@@ -3,12 +3,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: #f5f5f5;
 }
 
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .messenger {
-    width: 700px;
+    width: 100%;
+    max-width: 100%;
     border: 1px solid #ccc;
     border-radius: 10px;
     background: white;
@@ -18,11 +25,11 @@ body {
 }
 
 .header {
-    background: #6200ea;
+    background: #0294bc;
     color: white;
     padding: 15px;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .chat-box {
@@ -31,34 +38,43 @@ body {
     flex-direction: column-reverse;
     padding: 10px;
     overflow-y: auto;
-    height: 220px;
+    height: 100%;
 }
 
 .message {
-    background: #d1c4e9;
+    display: flex;
+    background: #77b6d5;
     padding: 10px;
     border-radius: 8px;
     margin-bottom: 10px;
     max-width: 80%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .input-area {
     display: flex;
-    padding: 10px;
+    width: 100%;
+    padding: 20px;
     background: #eee;
 }
 
 input {
     flex-grow: 1;
-    padding: 10px;
+    padding: 17px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+input, .bot, .user, button {
+    font-size: 17px;
 }
 
 button {
     margin-left: 10px;
     padding: 10px;
-    background: #6200ea;
+    background: #2b7ae0;
     color: white;
     border: none;
     border-radius: 5px;
@@ -66,5 +82,25 @@ button {
 }
 
 button:hover {
-    background: #4a00c1;
+    background: #042c8f;
+}
+
+.bot {
+    background-color:#499dec;
+    display: flex;
+    align-items: flex-start;
+    width: 55%;
+    overflow-wrap: break-word;
+}
+
+.user {
+    background-color: #98daf2;
+    align-self: flex-end;
+    width: 55%;
+    overflow-wrap: break-word;
+}
+
+.message-form {
+    display: flex;
+    width: 100%;
 }
