--- a/static/styles.css
+++ b/static/styles.css
@@ -1,16 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
-}
-
 html, body {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
 }
 
 .messenger {
@@ -42,23 +39,38 @@ html, body {
     height: 100%;
 }
 
-.message {
-    display: flex;
-    background: #77b6d5;
+.message, .bot, .user {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    white-space: pre-wrap;
     padding: 10px;
     border-radius: 8px;
-    margin-bottom: 10px;
     max-width: 80%;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: pre-wrap;
+    display: flex;
+    margin-bottom: 10px;
 }
 
-.input-area {
+.bot {
+    background-color: #aac4dc;
+    align-items: flex-start;
+    width: 55%;
+}
+
+.user {
+    background-color: #98daf2;
+    align-self: flex-end;
+    width: 55%;
+}
+
+.input-area, .message-form {
     display: flex;
     width: 100%;
     padding: 10px;
     background: #eee;
+}
+
+input, button, .bot, .user {
+    font-size: 17px;
 }
 
 input {
@@ -66,10 +78,6 @@ input {
     padding: 17px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
-
-input, .bot, .user, button {
-    font-size: 17px;
 }
 
 button {
@@ -84,24 +92,4 @@ button {
 
 button:hover {
     background: #042c8f;
-}
-
-.bot {
-    background-color:#499dec;
-    display: flex;
-    align-items: flex-start;
-    width: 55%;
-    overflow-wrap: break-word;
-}
-
-.user {
-    background-color: #98daf2;
-    align-self: flex-end;
-    width: 55%;
-    overflow-wrap: break-word;
-}
-
-.message-form {
-    display: flex;
-    width: 99%;
 }
